spacing fixes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,7 +56,7 @@ html {
     background-color: #fff;
     /* box-shadow: 0px 0px 20px #bbb; */
     height: 600px;
-    margin: 20px 0px;
+    margin: 30px 0px;
     padding: 40px 40px 0px 40px;
     overflow: hidden;
     border-radius: 32px;
@@ -251,7 +251,7 @@ footer {
     }
 
     .card {
-        margin: 20px;
+        margin: 40px;
     }
 
 }
