--- a/src/css/text.css
+++ b/src/css/text.css
@@ -70,6 +70,10 @@ a {
         opacity: 1;
     }
 
+    a.large-icon {
+        font-size: 2rem;
+    }
+
     a:hover {
         opacity: 1;
     }
@@ -82,6 +86,10 @@ a {
         margin-right: 6px;
     }
 
-        a:hover i {
+        p > a:hover i {
             margin-left: 6px;
+        }
+
+        a:hover i {
+            top: 8px;
         }
